some small edits

--- a/code/docker/Dockerfile
+++ b/code/docker/Dockerfile
@@ -7,7 +7,6 @@
 FROM ubuntu
 MAINTAINER Asif Zubair <asif.zubair@gmail.com>
 
-# Honestly, I have no idea why i am running this ENV command, must ask Anthony.
 ENV DEBIAN_FRONTEND noninteractive
 
 # Getting ready to install R!
@@ -15,13 +14,18 @@ RUN echo 'deb http://cran.stat.ucla.edu//bin/linux/ubuntu trusty/' | sudo tee -a
 RUN sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9
 
 # Best practices indicate not to run apt-get update on a single line and have multi line installation
-RUN apt-get update && install -y \
-    r-base \
+RUN apt-get update && apt-get install -y \
     bwa \
-    samtools \
-    git
+    git \
+    r-base \
+    samtools
 
-#COPY tmp/software /bin
-COPY tmp/samplefastq /Package_data/sample_fastq
 
-CMD [./my_alignment_script.sh]
+RUN mkdir /atacseq_counts
+
+COPY tmp/scripts /atacseq_counts
+#COPY tmp/samplefastq /Package_data/sample_fastq
+
+RUN bash /atacseq_counts/install_sambalster.sh
+
+#CMD [./my_alignment_script.sh]
