--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Vim swap files
+*.swp
 # History files
 .Rhistory
 .Rapp.history
@@ -14,8 +16,8 @@ vignettes/*.pdf
 
 # data files
 *.bam
+*.bai
 *.fastq
 *.fa
 hg19.*
 chr22*
-*.bai
