--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,17 +10,18 @@ MAINTAINER Asif Zubair <asif.zubair@gmail.com>
 ENV DEBIAN_FRONTEND noninteractive
 
 # Getting ready to install R!
-RUN echo 'deb http://cran.stat.ucla.edu//bin/linux/ubuntu trusty/' | sudo tee -a /etc/apt/sources.list.d/r.list
-RUN sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9
+RUN echo 'deb http://cran.stat.ucla.edu//bin/linux/ubuntu trusty/' | tee -a /etc/apt/sources.list.d/r.list
+RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9
 
-# Best practice is to not run apt-get update on a single line and to have multi-line installations (sorted alphabetically).
+# Installing required packages.
 RUN apt-get update && apt-get install -y \
     bwa \
     git \
     r-base \
+    r-base-dev \
     samtools
 
-# Make package directories. 
+# Make ATACseeker directories. 
 RUN mkdir -p /atacseq_counts/data /atacseq_counts/reference /atacseq_counts/scripts /atacseq_counts/install
 
 COPY tmp/data /atacseq_counts/data
