--- a/nativeApp/Dockerfile
+++ b/nativeApp/Dockerfile
@@ -38,8 +38,8 @@ RUN R CMD BATCH /atacseeker/scripts/install_packages.R
 # Required for rmarkdown
 # RStudio is removed once pandoc has been copied to bin
 
-RUN wget -q https://download1.rstudio.org/rstudio-0.99.486-amd64-debian.tar.gz /tmp
-RUN tar -zxf /tmp/rstudio-0.99.486-amd64-debian.tar.gz
+RUN wget --directory-prefix=/tmp https://download1.rstudio.org/rstudio-0.99.486-amd64-debian.tar.gz
+RUN tar -zxvf /tmp/rstudio-0.99.486-amd64-debian.tar.gz
 RUN cp /tmp/rstudio-0.99.486/bin/pandoc/* /bin
 RUN rm -rf /tmp/rstudio*
 
