--- a/nativeApp/Dockerfile
+++ b/nativeApp/Dockerfile
@@ -23,7 +23,7 @@ RUN apt-get update && apt-get install -y \
 
 # Make ATACseeker directories. 
 
-RUN mkdir -p /atacseeker/reference /atacseeker/scripts /atacseeker/install
+RUN mkdir -p /atacseeker/reference /atacseeker/scripts 
 
 # Copy reference and scripts to atacseeker folder
 
@@ -32,7 +32,7 @@ COPY tmp/scripts /atacseeker/scripts
 
 # Install R packages - knitr, rmarkdown, statmod, locfit, edgeR, csaw
 
-RUN R CMD BATCH /atacseeker/scripts/install_packages.R
+###RUN R CMD BATCH /atacseeker/scripts/install_packages.R
 
 # Install RStudio for pandoc libraries
 # Required for rmarkdown
