--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,17 @@
 data/input/appresults/*/*.bam
 data/input/appresults/*/*.bami
 data/*
-
-tmp/reference/hg19.*
-
+tmp/reference/.DS_Store
 tmp/scripts/.DS_Store
 tmp/scripts/.Rhistory
 tmp/scripts/install_samblaster.sh
 tmp/scripts/alignment_pipeline.sh
-
+tmp/scripts/*.rds
+tmp/scripts/*.pyc
+tmp/scripts/VCF_*
 basespace/*
+literature/*
+random/*
+vcf/*
+project_notes.md
+.DS_Store
